Update title to slide

--- a/_posts/0000-01-02-djanie1.md
+++ b/_posts/0000-01-02-djanie1.md
@@ -1,6 +1,7 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to our djanie's slide!"
 ---
-Good day to write code
-Use the left arrow to go back!
+Good day to Write code
+Your text
+
