modify line five to make it awesome

--- a/_posts/0000-01-02-djanie1.md
+++ b/_posts/0000-01-02-djanie1.md
@@ -2,6 +2,6 @@
 layout: slide
 title: "Welcome to our djanie's slide!"
 ---
-Good day to Write code
-Your text
+Good day to Write code. tada :)
+Use the left arrow to go back!
 
